Ajout de l'image du pendu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div class="container">
         <div class="jeu">
+            <img class="img-pendu" src="img/pendu6.svg" alt="pendu">
             <form id="hangman-form">
                 <label for="guess-input">Devinez une lettre ou le mot entier :</label><br>
                 <input type="text" id="guess-input"><br>
