Ajout de vérifications supplémentaires et commentaire du script

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
                 <input type="text" id="guess-input"><br>
                 <p class="message-erreur"></p>
                 <button type="submit" id="submit-button">Envoyer</button>
+                <div id="result"></div>
+                <div id="nombre-essais"></div>
             </form>
-            <div id="result"></div>
-            <div id="nombre-essais"></div>
+            <div class="informations">
+                <p>Lettres utilisées :</p>
+                <p class="lettresUtilisee"></p>
+                <p>Nombre de coups :</p>
+                <p class="nombreDeCoups"></p>
+            </div>
         </div>
         <div class="findejeu cache">
             <h2 class="message-findejeu"></h2>
